syntax = "proto3";

option go_package=".;proto";

message OrderRequest {
  string orderId = 1;
  int64 timeTmp = 2;
}

message OrderInfo {
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus =3;
}

service OrderService {
  rpc GetOrderInfo (stream OrderRequest) returns (stream OrderInfo);
}